--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                     </div> -->
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <div class="d-none d-lg-flex ms-2">
+                <div class=" d-lg-flex ms-2">
                     <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
                         Donate Now
                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
@@ -153,10 +153,8 @@
                         <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">About Us</div>
                         <!-- <h1 class="display-6 mb-5">We Help People In Need </h1> -->
                         <div class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4">
-                            <p class="text-dark mb-2">Aliqu diam amet diam et eos. Clita erat ipsum et lorem sed stet lorem sit clita duo justo erat amet</p>
-                            <span class="text-primary">Jhon Doe, Founder</span>
+                            <p class="text-dark mb-2">Great Samaj Sevi Sanstha, a community development & social uplift organization functioning in Uttar Pradesh, registered under societies registration act, 21, 1860 of Indian society registration act. It was conceptualized in early2000 and formed and registered on 8th October 2003. </p>
                         </div>
-                        <p class="mb-5">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
                         <!-- <a class="btn btn-primary py-2 px-3 me-3" href="">
                             Learn More
                             <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
@@ -169,6 +167,23 @@
                                 <i class="fa fa-arrow-right"></i>
                             </div>
                         </a> -->
+
+
+                        
+                        <h1 class="display-6 mb-4">Vision</h1>
+
+                        <p class="mb-5 text-dark">Great Samaj Sevi Sanstha sees an India where even the last man in the last row can live a dignified and self-sustained life with absolute social, physical, psychological and spiritual health and wellbeing. </p>
+
+
+
+                        <h1 class="display-6 mb-4">Mission</h1>
+
+                        <p class="mb-5 text-dark">
+
+                           
+                Promote health and well-being for the most vulnerable by addressing child and maternal health issues and supporting global health initiatives. 
+                Focus on underlying causes of ill health through awareness and social change. Combat poverty and inequality, ensuring access to resources for
+                 underserved communities, regardless of religion, caste, or creed. </p>
                     </div>
                 </div>
             </div>
