--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
                     </div> -->
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <div class="d-none d-lg-flex ms-2">
+                <div class=" d-lg-flex ms-2">
                     <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
                         Donate Now
                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
