--- a/donate.html
+++ b/donate.html
@@ -41,23 +41,11 @@
 
     <!-- Navbar Start -->
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
-        <div class="top-bar text-white-50 row gx-0 align-items-center d-none d-lg-flex">
-            <div class="col-lg-6 px-5 text-start">
-                <small><i class="fa fa-map-marker-alt me-2"></i>123 Hayatpura Spn, India</small>
-                <small class="ms-4"><i class="fa fa-envelope me-2"></i>info@example.com</small>
-            </div>
-            <div class="col-lg-6 px-5 text-end">
-                <small>Follow us:</small>
-                <a class="text-white-50 ms-3" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="text-white-50 ms-3" href=""><i class="fab fa-twitter"></i></a>
-                <a class="text-white-50 ms-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="text-white-50 ms-3" href=""><i class="fab fa-instagram"></i></a>
-            </div>
-        </div>
+       
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-12 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0">Great Samaj <span class="text-white">Sevi Sanstha</span></h1>
+            <a href="index.html" class="navbar-brand ms-5 ms-lg-0">
+                <h1 class=" fw-bold text-primary m-0">Great Samaj <span class="text-white">   Sevi Sanstha</span></h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -65,9 +53,9 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="index.html" class="nav-item nav-link ">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="about.html" class="nav-item nav-link ">About</a>
                     <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
-                    <a href="management.html" class="nav-item nav-link">Management</a>
+                    <a href="management.html" class="nav-item nav-link ">Management</a>
 
                     <!-- <a href="#" class="nav-item nav-link">Partnerships</a> -->
 
@@ -106,9 +94,9 @@
                             <a href="404.html" class="dropdown-item">404 Page</a>
                         </div>
                     </div> -->
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="volunteer.html" class="nav-item nav-link ">Volunteer With Us</a>
                 </div>
-                <div class=" d-lg-flex ms-2">
+                <div class="d-lg-flex ms-2">
                     <a class="btn btn-outline-primary py-2 px-3 active" href="donate.html">
                         Donate Now
                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
