--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- <title>ChariTeam - Free Nonprofit Website Template</title> -->
+    <title>Great Samaj Sevi Sanstha</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -41,17 +41,29 @@
 
     <!-- Navbar Start -->
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
-       
+        <div class="top-bar text-white-50 row gx-0 align-items-center d-none d-lg-flex">
+            <div class="col-lg-8 px-5 text-start">
+                <small><i class="fa fa-map-marker-alt me-2 "></i>18  Avas Vikas Colony, Shahjahanpur, U.P. India</small>
+                <small class="ms-4"><i class="fa fa-envelope me-2"></i>greatsamajsevisanstha@yahoo.com</small>
+            </div>
+            <div class="col-lg-4 px-5 text-end">
+                <small>Follow us:</small>
+                <a class="text-white-50 ms-3" href=""><i class="fab fa-facebook-f"></i></a>
+                <a class="text-white-50 ms-3" href=""><i class="fab fa-twitter"></i></a>
+                <!-- <a class="text-white-50 ms-3" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                <a class="text-white-50 ms-3" href=""><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-12 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-5 ms-lg-0">
-                <h1 class=" fw-bold text-primary m-0">Great Samaj <span class="text-white">   Sevi Sanstha</span></h1>
+                <h1 class=" fw-bold text-primary m-0 pb-lg-3">Great Samaj <span class="text-white">   Sevi Sanstha</span></h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <div class="navbar-nav ms-auto p-4 p-lg-0 px-lg-4 pt-lg-2">
                     <a href="index.html" class="nav-item nav-link ">Home</a>
                     <a href="about.html" class="nav-item nav-link active">About</a>
                     <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
@@ -94,11 +106,11 @@
                             <a href="404.html" class="dropdown-item">404 Page</a>
                         </div>
                     </div> -->
-                    <a href="volunteer.html" class="nav-item nav-link ">Volunteer With Us</a>
+                    <a href="volunteer.html" class="mx-lg-2 nav-item nav-link">Volunteer With us</a>
                 </div>
-                <div class="d-lg-flex ms-2">
+                <div class="d-lg-flex ms-2 ms-lg-0">
                     <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
-                        Donate Now
+                        Donate us
                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                             <i class="fa fa-arrow-right"></i>
                         </div>
@@ -330,29 +342,26 @@
         <div class="container py-5">
             <div class="row g-5 ">
                 <div class="col-lg-6 col-md-6">
-                    <h1 class="fw-bold text-primary mb-4">Great Samaj <span class="text-white">Sevi Sanstha</span></h1>
-                    <p>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita</p>
+                    <h1 class="fw-bold text-primary mb-4 ">Great Samaj <span class="text-white">Sevi Sanstha</span></h1>
+                    <p>Empowering lives through education, livelihood, and healthcare. <br> Join us in making a difference. Together, we can create a brighter future.</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square me-0" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square me-1" href="https://x.com/GSSS786?t=gekNur5g2WEIW042WPHmkg&s=08 "><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square me-1" href="https://www.facebook.com/share/JgyKTpWRLAQeG48t/?mibextid=qi2Omg"><i class="fab fa-facebook-f"></i></a>
+                        <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-youtube"></i></a> -->
+                        <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                        <a class="btn btn-square me-1" href=" https://www.instagram.com/gsss.786 "><i class="fab fa-instagram"></i></a>
+
+
+                        <!-- <a class="btn btn-square me-0" href=""><i class="fab fa-linkedin-in"></i></a> -->
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class=" px-lg-5 col-lg-6 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p><i class="fa fa-map-marker-alt me-3"></i>18 Avas Vikas Colony, Shahjahanpur, U.P. India</p>
+                    <p><i class="fa fa-phone-alt me-3"></i>+91-9453413993</p>
+                    <p><i class="fa fa-envelope me-3"></i>greatsamajsevisanstha@yahoo.com</p>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
-                </div>
+                
                 <!-- <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
