--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- <title>Charity - Free Nonprofit Website Template</title> -->
+    <title>Great Samaj Sevi Sanstha</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -49,22 +49,22 @@
             </div>
             <div class="col-lg-4 px-5 text-end">
                 <small>Follow us:</small>
-                <a class="text-white-50 ms-3" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="text-white-50 ms-3" href=""><i class="fab fa-twitter"></i></a>
-                <a class="text-white-50 ms-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="text-white-50 ms-3" href=""><i class="fab fa-instagram"></i></a>
+                <a class="text-white-50 ms-3" href="https://www.facebook.com/share/JgyKTpWRLAQeG48t/?mibextid=qi2Omg"><i class="fab fa-facebook-f"></i></a>
+                <a class="text-white-50 ms-3" href="https://x.com/GSSS786?t=gekNur5g2WEIW042WPHmkg&s=08 "><i class="fab fa-twitter"></i></a>
+                <!-- <a class="text-white-50 ms-3" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                <a class="text-white-50 ms-3" href=" https://www.instagram.com/gsss.786 "><i class="fab fa-instagram"></i></a>
             </div>
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-12 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-5 ms-lg-0">
-                <h1 class=" fw-bold text-primary m-0">Great Samaj <span class="text-white">   Sevi Sanstha</span></h1>
+                <h1 class=" fw-bold text-primary m-0 pb-lg-3">Great Samaj <span class="text-white">   Sevi Sanstha</span></h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <div class="navbar-nav ms-auto p-4 p-lg-0 px-lg-4 pt-lg-2">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
@@ -107,9 +107,9 @@
                             <a href="404.html" class="dropdown-item">404 Page</a>
                         </div>
                     </div> -->
-                    <a href="volunteer.html" class="nav-item nav-link">Volunteer With us</a>
+                    <a href="volunteer.html" class="mx-lg-2 nav-item nav-link">Volunteer With us</a>
                 </div>
-                <div class="d-lg-flex ms-2">
+                <div class="d-lg-flex ms-2 ms-lg-0">
                     <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
                         Donate us
                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
@@ -183,7 +183,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100 pt-5 pe-5" src="./img/landing.jpg" alt="" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 pt-5 " src="./img/landing.jpg" alt="" style="object-fit: cover;">
                         <!-- <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="" alt="" style="width: 200px; height: 200px;"> -->
                     </div>
                 </div>
@@ -544,13 +544,17 @@
         <div class="container py-5">
             <div class="row g-5 ">
                 <div class="col-lg-6 col-md-6">
-                    <h1 class="fw-bold text-primary mb-4">Great Samaj <span class="text-white">Sevi Sanstha</span></h1>
-                    <p>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita</p>
+                    <h1 class="fw-bold text-primary mb-4 ">Great Samaj <span class="text-white">Sevi Sanstha</span></h1>
+                    <p>Empowering lives through education, livelihood, and healthcare. <br> Join us in making a difference. Together, we can create a brighter future.</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square me-0" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square me-1" href="https://x.com/GSSS786?t=gekNur5g2WEIW042WPHmkg&s=08 "><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square me-1" href="https://www.facebook.com/share/JgyKTpWRLAQeG48t/?mibextid=qi2Omg"><i class="fab fa-facebook-f"></i></a>
+                        <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-youtube"></i></a> -->
+                        <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                        <a class="btn btn-square me-1" href=" https://www.instagram.com/gsss.786 "><i class="fab fa-instagram"></i></a>
+
+
+                        <!-- <a class="btn btn-square me-0" href=""><i class="fab fa-linkedin-in"></i></a> -->
                     </div>
                 </div>
                 <div class=" px-lg-5 col-lg-6 col-md-6">
