--- a/service.html
+++ b/service.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- <title>ChariTeam - Free Nonprofit Website Template</title> -->
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -50,7 +49,7 @@
                 <small>Follow us:</small>
                 <a class="text-white-50 ms-3" href=""><i class="fab fa-facebook-f"></i></a>
                 <a class="text-white-50 ms-3" href=""><i class="fab fa-twitter"></i></a>
-                <a class="text-white-50 ms-3" href=""><i class="fab fa-linkedin-in"></i></a>
+                <!-- <a class="text-white-50 ms-3" href=""><i class="fab fa-linkedin-in"></i></a> -->
                 <a class="text-white-50 ms-3" href=""><i class="fab fa-instagram"></i></a>
             </div>
         </div>
@@ -208,7 +207,6 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://freewebsitecreate.net/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://freewebsitecreate.net">Free Website Create</a>
                     </div>
                 </div>
             </div>
